fixed full width layout bug

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -49,7 +49,7 @@ a {
 #top_content_full {
 	margin: 0;
 	margin-left: 20px;
-	marign-right :20px;
+	margin-right: 20px;
 }
 
 #logo {
